# Crew_AI

./: Crewai,_Augmented_llm,memory,Crew_and_tools.ipynb  pyproject.toml
litellm/: pyproject.toml
litellm/src/project01/: hello.py
src/karachi/lahore/: my_file.py
src/project_2/: __init__.py  hello.py
